add headers translation